[gd_scene load_steps=6 format=3 uid="uid://co7x6mjl7feub"]

[ext_resource type="Texture2D" uid="uid://kmehlgls5vul" path="res://assets/textures/items/frames/box_common.png" id="2_rsc15"]
[ext_resource type="Script" path="res://components/modules/selection_button.gd" id="3_n4uw4"]
[ext_resource type="Theme" uid="uid://b1a5sjt2xibwo" path="res://assets/themes/strata_theme/strata_theme.tres" id="4_7hqab"]
[ext_resource type="Texture2D" uid="uid://bf0jhyjt1aht7" path="res://assets/textures/items/alien-casket.png" id="4_qqtgs"]
[ext_resource type="Texture2D" uid="uid://csjed3ay1r3wa" path="res://assets/textures/items/item-frame-basic.png" id="5_wjckh"]

[node name="SelectionButton" type="TextureButton"]
custom_minimum_size = Vector2(230, 378)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -189.0
offset_right = 115.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_n4uw4")

[node name="ButtonColor" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.72549)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.380392, 0.329412, 0.415686, 1)

[node name="ButtonPatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rsc15")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="SelectionTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 170.0
offset_right = 114.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_7hqab")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.52549)
text = "DEBUG ITEM"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 3
uppercase = true
max_lines_visible = 1

[node name="SelectionIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 29.5
offset_right = 62.5
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qqtgs")

[node name="ItemPatchRect" type="NinePatchRect" parent="SelectionIcon"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rsc15")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="ItemBG" type="TextureRect" parent="SelectionIcon"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wjckh")

[node name="SelectionDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 193.0
offset_right = -12.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("4_7hqab")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.372549)
theme_override_font_sizes/font_size = 14
text = "This is a debug item that doesn't do anything when selected, really. I could even put a lorem ipsum right here and it shouldn't show anything. Be careful to not put a lot of text here, as it only holds as much as 10 lines of text."
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3
max_lines_visible = 10

[node name="Panel" type="Panel" parent="SelectionDescription"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
